--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@vdinar/vdinar-rpc": "^0.1.0",
     "express": "^4.16.4",
+    "mongodb": "^3.2.3",
     "pug": "^2.0.3"
   }
 }
